<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/value1_title"
        android:id="@+id/"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1_title"
            android:id="@+id/radioButton"
            android:layout_gravity="left" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_title2"
            android:id="@+id/radioButton2"
            android:layout_gravity="left|center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3_title"
            android:id="@+id/radioButton3"
            android:layout_gravity="left" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_title"
        android:id="@+id/checkBox"
        android:layout_gravity="left|center_horizontal" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_values_title"
        android:id="@+id/buttonAdd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_json_title"
        android:id="@+id/buttonSaveJSON" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Открыть JSON"
        android:id="@+id/buttonJSON" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewJSON" />
</LinearLayout>