<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_shared_preferences"
        android:id="@+id/buttonShowPreferences"
        android:layout_marginBottom="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_csv_title"
        android:id="@+id/buttonOpenCSV"
        android:layout_centerVertical="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_title"
        android:id="@+id/buttonPoster"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="139dp" />

</LinearLayout>
